# sectora

./: -  .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE.md  Makefile  README.md  build.rs  cargo-config  docker-compose.yml  rustfmt.toml  sectora.conf.template
.circleci/: config.yml
.dependabot/: config.toml  config.yml
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
ansible/: ghteam-auth.sh  sectora.service  sectora.sh  site.yml
ansible/roles/ghteam-auth/handlers/: main.yml
ansible/roles/ghteam-auth/tasks/: main.yml
ansible/roles/sectora/handlers/: main.yml
ansible/roles/sectora/tasks/: main.yml
ansible/templates/: ghteam-auth.conf  sectora.conf  sectora.service
assets/: sectora.service  sectora.sh
assets/conf-files/: sectora.conf
assets/scripts/: postinst  postrm  templates
debian/: config  control  copyright  postinst  postrm  templates
src/: applog.rs  buffer.rs  connection.rs  cstructs.rs  daemon.rs  error.rs  ghclient.rs  lib.rs  main.rs  message.rs  runfiles.rs  statics.rs  structs.rs  syslog.rs
test/: .gitignore  Makefile  docker-compose.yml  testconf.toml
test/ansible/: Dockerfile  hosts  localtest.yml  sectora.sh  templates
test/client/: Dockerfile  hosts  localtest.yml  sshconfig
test/json-server/: Dockerfile  db.json  routes.json
test/keys/root/: id_rsa  id_rsa.pub
test/keys/user/: id_rsa  id_rsa.pub
