[package]
name = "sectora"
version = "0.1.0"
authors = ["Yasuyuki YAMADA <yasuyuki.ymd@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
libc = "0.2"
lazy_static = "1.4"
nix = "0.15"
http = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
structopt = "0.3"
log = "0.4.8"
syslog = "5.0"

[[bin]]
name = "sectora"
path = "src/main.rs"

[[bin]]
name = "sectorad"
path = "src/daemon.rs"

[lib]
name = "nss_sectora"
path = "src/lib.rs"
crate-type = ["cdylib"]
