[package]
name = "sectora"
version = "0.1.0"
authors = ["Yasuyuki YAMADA <yasuyuki.ymd@gmail.com>"]
build = "build.rs"
edition = "2018"
license-file = "LICENSE.md"

[dependencies]
futures = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
libc = "0.2"
lazy_static = "1.4"
nix = "0.17"
hyper = "0.13"
hyper-tls = "0.4"
structopt = "0.3"
log = "0.4.8"
syslog = "5.0"
tokio = { version = "0.2", features = [ "macros", "rt-core", "rt-threaded"] }

[[bin]]
name = "sectora"
path = "src/main.rs"

[[bin]]
name = "sectorad"
path = "src/daemon.rs"

[lib]
name = "nss_sectora"
path = "src/lib.rs"
crate-type = ["cdylib"]


[package.metadata.deb]
maintainer = "Yasuyuki YAMADA <yasuyuki.ymd@gmail.com>"
copyright = "2017-2019 Yasuyuki YAMADA <yasuyuki.ymd@gmail.com>"
depends = "$auto, systemd, openssh-server"
extended-description = """\
**Sector A**uthentication
(formerly named as **ghteam-auth**)
Using this program, you can grant login privileges on your servers to GitHub team members or outside collaborators of your repository.
Implemented with Rust."""
section = "admin"
priority = "optional"
assets = [
    ["target/release/sectora", "usr/sbin/", "755"],
    ["target/release/sectorad", "usr/sbin/", "755"],
    ["target/release/libnss_sectora.so", "usr/lib/libnss_sectora.so", "644"],
    ["target/release/libnss_sectora.so", "usr/lib/libnss_sectora.so.2", "644"],
    ["assets/conf-files/sectora.conf", "etc/sectora.conf", "644"],
    ["ansible/sectora.sh", "usr/sbin/", "755"],
    ["ansible/templates/sectora.service", "etc/systemd/system/", "644"],
]
conf-files = [
    "etc/sectora.conf",
]
maintainer-scripts = "assets/scripts"