[package]
name = "sectora"
version = "0.5.0"
authors = ["Yasuyuki YAMADA <yasuyuki.ymd@gmail.com>"]
build = "build.rs"
description = "SSH authentication with the GitHub team and repo"
edition = "2024"
license = "MIT"
readme = "README.md"
rust-version = "1.90.0"

[dependencies]
futures = "0.3"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
libc = "0.2"
nix = "0.30"
hyper = { version = "0.14.27", features = ["http1", "client", "tcp"] }
hyper-tls = "0.6.0"
log = "0.4.28"
syslog = "7.0"
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread"] }
sd-notify = "0.4.5"
clap = { version = "4.5.49", features = ["derive"] }
clap_complete = "4.5.59"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json"] }

[[bin]]
name = "sectora"
path = "src/main.rs"

[[bin]]
name = "sectorad"
path = "src/daemon.rs"

[lib]
name = "nss_sectora"
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.deb]
maintainer = "Yasuyuki YAMADA <yasuyuki.ymd@gmail.com>"
copyright = "2017-2020 Yasuyuki YAMADA <yasuyuki.ymd@gmail.com>"
depends = "$auto, systemd, openssh-server"
extended-description = """\
**Sector A**uthentication
(formerly named as **ghteam-auth**)
Using this program, you can grant login privileges on your servers to GitHub team members or outside collaborators of your repository.
Implemented with Rust."""
section = "admin"
priority = "optional"
assets = [
    ["target/release/sectora", "usr/sbin/", "755"],
    ["target/release/sectorad", "usr/sbin/", "755"],
    ["target/release/libnss_sectora.so", "usr/lib/libnss_sectora.so", "644"],
    ["target/release/libnss_sectora.so", "usr/lib/libnss_sectora.so.2", "644"],
    ["assets/conf-files/sectora.conf", "etc/sectora.conf", "644"],
    ["assets/sectora.sh", "usr/sbin/", "755"],
    ["assets/sectora.service", "etc/systemd/system/", "644"],
]
conf-files = ["/etc/sectora.conf"]
maintainer-scripts = "assets/scripts"
